--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
+  <!-- FavIcon -->
+  <link rel="FavIcon" href="favicon.ico">
+  <!-- External CSS -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
