--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Simon</title>
   <!-- FavIcon -->
-  <link rel="FavIcon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <!-- External CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- Google Fonts -->
